--- a/v1/index.html
+++ b/v1/index.html
@@ -10,8 +10,6 @@
         <div class="container">
 
             <button class="btn toggle-all">Toggle All</button>
-            <button class="btn expand-all">Expand All</button>
-            <button class="btn collapse-all">Collapse All</button>
        
             <div class="panel">
                 <h4 class="header">Panel 1</h4>
@@ -35,7 +33,7 @@
             </div>
         </div>
        
-        <script src="lib/el.js" type="text/javascript"></script>
+        <script src="lib/el.min.js" type="text/javascript"></script>
         <script src="actions.js" type="text/javascript"></script>
     </body>
 </html>
